editors/tree-sitter-bork/test/corpus/comprehensions.txt
==================
Comprehensions
==================
fn main() {
  xs = for {
    row in rows

    (i, cell) in row.indexed(); if cell > i
    total: Int = cell + i
  } yield (row, total)
  for { break }
}

---

(source_file
  (function_declaration
    name: (identifier)
    (parameters)
    (block
      (binding
        name: (identifier)
        (comprehension_expression
          (comprehension_generator
            name: (identifier)
            source: (qualified_name
              (identifier)))
          (comprehension_generator
            pattern: (tuple_pattern
              (pattern
                (qualified_name
                  (identifier)))
              (pattern
                (qualified_name
                  (identifier))))
            source: (call_expression
              function: (selector_expression
                (qualified_name
                  (identifier))
                field: (identifier))))
          (comprehension_filter
            condition: (binary_expression
              left: (qualified_name
                (identifier))
              right: (qualified_name
                (identifier))))
          (binding
            name: (identifier)
            (type
              (qualified_name
                (identifier)))
            (binary_expression
              left: (qualified_name
                (identifier))
              right: (qualified_name
                (identifier))))
          value: (tuple_literal
            (qualified_name
              (identifier))
            (qualified_name
              (identifier)))))
      (for_expression
        (block)))))

==================
Refutable comprehension generators
==================
fn main() {
  xs = for {
    .Some(v) in maybes
    u: User in mixed
    (k, Option.Some(w)) in pairs
    x in xs
  } yield (v, u, k, w, x)
}

---

(source_file
  (function_declaration
    name: (identifier)
    (parameters)
    (block
      (binding
        name: (identifier)
        (comprehension_expression
          (comprehension_generator
            pattern: (pattern
              (context_pattern
                name: (identifier))
              (pattern
                (qualified_name
                  (identifier))))
            source: (qualified_name
              (identifier)))
          (comprehension_generator
            pattern: (pattern
              name: (identifier)
              (type
                (qualified_name
                  (identifier))))
            source: (qualified_name
              (identifier)))
          (comprehension_generator
            pattern: (tuple_pattern
              (pattern
                (qualified_name
                  (identifier)))
              (pattern
                (qualified_name
                  (identifier)
                  (identifier))
                (pattern
                  (qualified_name
                    (identifier)))))
            source: (qualified_name
              (identifier)))
          (comprehension_generator
            name: (identifier)
            source: (qualified_name
              (identifier)))
          value: (tuple_literal
            (qualified_name
              (identifier))
            (qualified_name
              (identifier))
            (qualified_name
              (identifier))
            (qualified_name
              (identifier))
            (qualified_name
              (identifier))))))))
